# Alif-LSP

./: .clang-format  .gitignore  CMakeLists.txt
.github/workflows/: build.yml
src/: AlifLSP.cpp  Completion.cpp  DocManager.cpp  Logger.cpp  Server.cpp  Transport.cpp
src/include/: Completion.h  DocManager.h  Server.h  Transport.h
tests/: test_completion.cpp
